--- a/css/navbar.css
+++ b/css/navbar.css
@@ -22,7 +22,6 @@ p {
 	text-align: center !important;
 }
 
-
 /* TOP BANNER STYLING */
 
 #top-banner img {
@@ -31,11 +30,12 @@ p {
 #top-banner h1 {
 	color: #1F3E50;
 	font-weight: bold;
-	font-size: 13px;
+	/* font-size: 4vw; */
 	font-family: 'Montserrat', sans-serif;
 	position: relative;
-	top: -28px;
-	padding-bottom: 4%;
+	top: 50%;
+	/* top: -28px; */
+	/* padding-bottom: 4%; */
 }
 #topnavbar {
 	margin: 0;
@@ -58,7 +58,8 @@ p {
 /* NAVBAR */
 
 .navbar {
-	background-color: #1F3E50 !important;
+	/* background-color: #1F3E50 !important; */
+	background-color: cadetblue;
 	border-bottom: none;
 	width: 100%;
 	height: auto;
@@ -74,7 +75,8 @@ p {
 	padding-bottom: 8px;
 	font-size: 18px;
 	font-family: 'Montserrat', sans-serif;
-	background-color: #1F3E50;
+	/* background-color: #1F3E50; */
+	background-color: cadetblue;
 	border: none;
 }
 .navbar .navbar-nav {
@@ -96,12 +98,12 @@ p {
 	background-color: #1F3E50 !important;
 }
 
-
 /* FOOTER STYLING */
 
 .footer {
 	height: auto;
-	background-color: #1F3E50;
+	/* background-color: #1F3E50; */
+	background-color: cadetblue;
 }
 .footerlinks {
 	padding-top: 30px;
@@ -155,7 +157,8 @@ p {
 		font-size: 16px;
 		font-family: 'Montserrat', sans-serif;
 		margin-top: 0px;
-		background-color: #1F3E50;
+		/* background-color: #1F3E50; */
+		background-color: cadetblue;
 		border: none;
 	}
 	.contactnumber {
@@ -174,9 +177,8 @@ p {
 	}
 }
 
-
-@media only screen 
-and (min-width: 480px) 
+@media only screen
+and (min-width: 480px)
 and (max-width: 1024px) {
 
 	.contactnumber {
@@ -198,7 +200,8 @@ and (max-width: 1024px) {
 		font-size: 16px;
 		font-family: 'Montserrat', sans-serif;
 		margin-top: 0px;
-		background-color: #1F3E50;
+		/* background-color: #1F3E50; */
+		background-color: cadetblue;
 		border: none;
 	}
 	.navbar-toggle {
@@ -211,9 +214,9 @@ and (max-width: 1024px) {
 
 /* iPads (landscape) ----------- */
 
-@media only screen 
-and (min-width: 768px) 
-and (max-width: 1200px) 
+@media only screen
+and (min-width: 768px)
+and (max-width: 1200px)
 and (orientation: landscape) {
 
 	.contactnumber {
@@ -233,7 +236,8 @@ and (orientation: landscape) {
 		font-size: 18px;
 		font-family: 'Montserrat', sans-serif;
 		margin-top: -2px;
-		background-color: #1F3E50;
+		/* background-color: #1F3E50; */
+		background-color: cadetblue;
 	}
 	.navbar-header {
 		float: none;
@@ -273,7 +277,7 @@ and (orientation: landscape) {
 
 /* Large screens ----------- */
 
-@media only screen 
+@media only screen
 and (min-width: 1824px) {
 
 	.navbar {
