--- a/css/blog-post-styling.css
+++ b/css/blog-post-styling.css
@@ -5,10 +5,10 @@ body {
 
 .navbar {
 	border-radius: 0;
-	border-color: #733525;
+	/* border-color: #733525; */
 	height: auto;
 	width: 100%;
-	background-color: #733525;
+	/* background-color: #733525; */
 }
 
 .row {
@@ -105,54 +105,40 @@ a:hover {
 	text-decoration: none;
 }
 
-
-
 		/* Smartphones (portrait and landscape) ----------- */
 	@media only screen
 
-
 	and (max-width : 480px) {
-		
+
 .heading h1{
 padding-bottom: 60px;
 
 }
 
-
 .banner img{
-			
+
 width:80% !important;
 height: 100%;
 
 }
-
-
 
 .heading h1 {
 margin-top: 20px;
 
 }
 
-
 }
-
-
 
 @media only screen
 	and (min-width : 480px)
 	and (max-width : 1024px) {
 
-
-
-
 .banner img{
-			
+
 width:80% !important;
 height: 100%;
 
 }
-
-
 
 .heading h1{
 
@@ -160,24 +146,21 @@ margin-top: 20px;
 
 }
 
-
 .blogtext p {
 
 padding-top: 30px;
-		
+
 }
 }
 
 /* iPads (landscape) ----------- */
 
-@media only screen 
-and (min-width: 768px) and (max-width: 1024px) 
+@media only screen
+and (min-width: 768px) and (max-width: 1024px)
 and (orientation: landscape) {
 
-
 	.blogtext img{
-width:80% !important; 
+width:80% !important;
 }
 
 }
-
