--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,28 @@
+.nav li {
+	font-size: 14px !important;
+	font-family: Arial, Helvetica, sans-serif !important;
+}
+
+.main-title {
+	background-color: cadetblue;
+	top: 0;
+	bottom: 0;
+	margin: 0;
+	padding: 0;
+}
+
+.main-title h1{
+	margin: 0;
+	margin-top: -1px;
+	padding: 20px;
+	font-size: 60px;
+
+}
+
+.main-title h1 :hover{
+text-decoration: none !important;
+}
+
 /* Top Carousel */
 #topcarousel>div.col-md-6.col-md-offset-3 {
 	background-color: cadetblue;
@@ -24,7 +49,7 @@
 	background-size: cover;
 	width: 100%;
 	height: 100%;
-	height: 400px;
+	height: 300px;
 }
 
 #slide2 {
@@ -33,7 +58,7 @@
 	background-size: cover;
 	width: 100%;
 	height: 100%;
-	height: 400px;
+	height: 300px;
 }
 
 #slide3 {
@@ -42,11 +67,11 @@
 	background-size: cover;
 	width: 100%;
 	height: 100%;
-	height: 400px;
+	height: 300px;
 }
 
 .topcarousel .item {
-	height: 400px;
+	height: 300px;
 }
 
 .topcarousel {
@@ -58,13 +83,13 @@
 	font-weight: bold;
 	font-family: 'Montserrat', sans-serif;
 	padding-bottom: 40px;
-	padding-top: 60px;
+	padding-top: 40px;
 	padding-left: 3px;
 	padding-right: 3px;
 }
 
 .features img {
-	width: 60%;
+	width: 40%;
 	/* background-color: cadetblue; */
 }
 
